# Distributed-SWMR-register

./: .gitignore  Cargo.toml  LICENSE  README.md
3RD-PARTY-LICENSES/: LICENSE
application/: Cargo.toml  README.md
application/src/: abd_node.rs  communicator.rs  configuration_manager.rs  entry.rs  main.rs  mediator.rs  messages.rs  node.rs  quorum.rs  register.rs  register_array.rs  responsible_cell.rs  run_result.rs  settings.rs  terminal_output.rs  vector.rs
application/src/abd_node/: tests.rs
application/src/abd_node/tests/: start_values.rs  write.rs
application/src/abd_node/tests/write/: message_sending.rs  termination.rs  variable_changes.rs
application/src/data_types/: mod.rs  register.rs  register_array.rs  timestamp.rs  vector.rs  vector_clock.rs
commons/: Cargo.toml
commons/src/: arguments.rs  execution.rs  lib.rs  misc.rs  node_info.rs  remote_machine.rs  run_result.rs  types.rs
evaluator/: Cargo.toml  README.md  scenarios_example.txt
evaluator/src/: arguments.rs  execution.rs  main.rs  run_result.rs  run_scenario.rs  scenario.rs
local_starter/: Cargo.toml  README.md  hosts.txt  node001.eval  node002.eval  node003.eval
local_starter/src/: arguments.rs  main.rs
remote_starter/: Cargo.toml  README.md  hosts_example.txt  plan.txt  rustfmt.toml
remote_starter/scripts/: planet_lab.sh  rust_only.sh
remote_starter/src/: arguments.rs  execution.rs  main.rs
src/: config_manager.rs  main.rs  message.rs  messages.rs  node.rs  register.rs
