[package]
name = "commons"
version = "0.1.0"
authors = ["Oskar Lundström <21679735+osklunds@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.39"